# 3DViewer

./: README.md
src/: CMakeLists.txt  CppCheckSuppressions.txt  Makefile  configure  figure.cc  figure.h  main.cc  observer.h  raw_document.texi  resources.qrc
src/QtGifImage/: .gitignore  CMakeLists.txt  qgifglobal.h  qgifimage.cpp  qgifimage.h  qgifimage_p.h
src/QtGifImage/giflib/: CMakeLists.txt  gif_lib.h
src/cmake/modules/: CodeCoverage.cmake
src/controllers/: mvp_controller.h  parser_controller.h
src/models/: mvpchange.cc  mvpchange.h  parser.cc  parser.h
src/s21_matrixplus/: .gitignore  CMakeLists.txt  matrix.cpp  s21_matrix_oop.h
src/s21_matrixplus/tests/: tests.cpp
src/shaders/: fshader.glsl  vshader.glsl
src/tests/: CMakeLists.txt  mvp_test.cc  parser_test.cc  tests.cc
src/views/: mainwindow.cc  mainwindow.h  mainwindow.ui  viewer_settings.cc  viewer_settings.h  viewer_widget.cc  viewer_widget.h
